--- a/nuxeo-dynamic-asset-transformation-webui/src/main/resources/web/nuxeo.war/ui/nuxeo-asset-transformation/nuxeo-asset-transformation.html
+++ b/nuxeo-dynamic-asset-transformation-webui/src/main/resources/web/nuxeo.war/ui/nuxeo-asset-transformation/nuxeo-asset-transformation.html
@@ -64,13 +64,13 @@ limitations under the License.
 
 <nuxeo-slot-content name="jobs" slot="DRAWER_ITEMS" order="95">
     <template>
-        <nuxeo-menu-icon label="My Jobs" name="jobs" icon="icons:schedule"></nuxeo-menu-icon>
+        <nuxeo-menu-icon label="label.drawer.async.job.title" name="jobs" icon="icons:schedule"></nuxeo-menu-icon>
     </template>
 </nuxeo-slot-content>
 
 <nuxeo-slot-content name="jobs" slot="DRAWER_PAGES">
     <template>
-        <nuxeo-asset-transformation-async-drawer name="jobs" label="My Jobs"></nuxeo-asset-transformation-async-drawer>
+        <nuxeo-asset-transformation-async-drawer name="jobs" label="label.drawer.async.job.title"></nuxeo-asset-transformation-async-drawer>
     </template>
 </nuxeo-slot-content>
 
